Bug 148779 - Crash when editing "Structure and Formatting" of Bibliography (macOS only or perhaps also ios?)
Summary: Crash when editing "Structure and Formatting" of Bibliography (macOS only or ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.2.2 release
Hardware: ARM macOS (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.4
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2022-04-25 19:31 UTC by leana.jiang
Modified: 2022-04-28 07:56 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
logfile of macOS after the crash of LibreOffice (135.66 KB, text/plain)
2022-04-25 19:33 UTC, leana.jiang
Details

Note You need to log in before you can comment on or make changes to this bug.
Description leana.jiang 2022-04-25 19:31:59 UTC
Description:
Right-click a generated Bibliography index > "Edit Index" > "Entries" tab > "Structure and Formatting", removing text to the text field of text separator crashes LibreOffice 

Steps to Reproduce:
1. Create bibliography: "Insert" > "Table of Contents and Index" > "Table of Contents, index and Bibliography".
2. "Entries" tab > "Structure and Formatting".
I should be able to add/remove text in the text boxes.
3. Remove text to the text field of text separator crashes LibreOffice (even where there are still text to delete)

Actual Results:
Crashes LibreOffice completely

Expected Results:
Be able to add/delete text to the text field


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Version: 7.3.2.2 / LibreOffice Community
Build ID: 49f2b1bff42cfccbd8f788c8dc32c1c309559be0
CPU threads: 8; OS: Mac OS X 12.3.1; UI render: default; VCL: osx
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Calc: threaded

Crash log from macOS
https://controlc.com/64e66b9f
Comment 1 leana.jiang 2022-04-25 19:33:53 UTC
Created attachment 179766 [details]
logfile of macOS after the crash of LibreOffice
Comment 2 Xisco Faulí 2022-04-26 07:20:28 UTC
Thanks for reporting this isssue

I can't reproduce it in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 67d8c245daf7c6ee33e908255f2bbd0ea8d08206
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: x11
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 3 Julien Nabet 2022-04-26 19:13:30 UTC
This part of bt:
4   libobjc.A.dylib               	       0x1af0743e4 class_createInstance + 64
5   CoreFoundation                	       0x1af239eb8 __CFAllocateObject + 24
6   CoreFoundation                	       0x1af23b714 __NSDictionaryM_new + 132
7   CoreFoundation                	       0x1af23acb8 CFDictionaryCreateMutable + 44
8   CoreText                      	       0x1b09f2774 TFont::SetExtras(__CTFontDescriptor const*) + 96
9   CoreText                      	       0x1b09f22b8 TFont::TFont(__CTFontDescriptor const*, double, CGAffineTransform const*, __CTFontDescriptor const*) + 296
10  CoreText                      	       0x1b09f203c TCFRef<CTFont*> TCFBase_NEW<CTFont, __CTFontDescriptor const*, double&, CGAffineTransform const*&, __CTFontDescriptor const*&>(__CTFontDescriptor const*&&, double&, CGAffineTransform const*&, __CTFontDescriptor const*&) + 112
11  CoreText                      	       0x1b09f1ee0 CTFontCreateWithFontDescriptor + 108
12  libvclplug_osxlo.dylib        	       0x107cc6cb8 getFontTable(hb_face_t*, unsigned int, void*) + 52
13  libvcllo.dylib                	       0x10700dbac _hb_graphite2_shaper_face_data_create + 52
14  libvcllo.dylib                	       0x10700b7ec hb_shape_plan_key_t::init(bool, hb_face_t*, hb_segment_properties_t const*, hb_feature_t const*, unsigned int, int const*, unsigned int, char const* const*) + 804
15  libvcllo.dylib                	       0x10700c128 hb_shape_plan_create_cached2 + 124
16  libvcllo.dylib                	       0x10700c394 hb_shape_full + 60
17  libvcllo.dylib                	       0x106d54ba8 GenericSalLayout::LayoutText(vcl::text::ImplLayoutArgs&, SalLayoutGlyphsImpl const*) + 3024
18  libvcllo.dylib                	       0x106c2b994 OutputDevice::ImplLayout(rtl::OUString const&, int, int, Point const&, long, o3tl::span<int const>, SalLayoutFlags, vcl::text::TextLayoutCache const*, SalLayoutGlyphs const*) const + 556
19  libvcllo.dylib                	       0x106c2c9f0 OutputDevice::GetCaretPositions(rtl::OUString const&, int*, int, int, SalLayoutGlyphs const*) const + 120
shows it's macOS only bug. (or perhaps also ios?)
Comment 4 Julien Nabet 2022-04-26 19:22:00 UTC
Caolán: I don't know if you've got a Mac available (knowing that it's even more complicated now with Intel and ARM Mac Machines and LO versions) to make some tests but noticing https://gerrit.libreoffice.org/c/core/+/133461, thought you might be interested in the bt of the bugtracker.
Comment 5 Caolán McNamara 2022-04-27 15:54:28 UTC
I wonder if this is the same problem as fixed by https://cgit.freedesktop.org/libreoffice/core/commit/?id=31700036e517691d154701f4b8aeecb85cde607f which looks quite similar and isn't present in 7-3. https://gerrit.libreoffice.org/c/core/+/133482 for that theory.
Comment 6 Julien Nabet 2022-04-27 17:41:16 UTC
(In reply to Caolán McNamara from comment #5)
> I wonder if this is the same problem as fixed by
> https://cgit.freedesktop.org/libreoffice/core/commit/
> ?id=31700036e517691d154701f4b8aeecb85cde607f which looks quite similar and
> isn't present in 7-3. https://gerrit.libreoffice.org/c/core/+/133482 for
> that theory.

Great news!
So at least macOS x86-64 LO version can be tested with daily builds from:
https://dev-builds.libreoffice.org/daily/master/MacOSX-x86_64@tb81-TDF/current/

BTW, I didn't find anything for macOS ARM in https://dev-builds.libreoffice.org/daily/master/ 

If this fix made it, hope it'll be merged soon so it'll be available at least for 7.3.4 (I suppose it'd be too late for 7.3.3).
Comment 7 Commit Notification 2022-04-28 07:50:37 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/a82f8d5993f7dc061eb5465a4565f3c76555c74a

Related: tdf#148779 Avoid endless recursion in ImplSmallBorderWindowView::Init

It will be available in 7.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2022-04-28 07:56:57 UTC
lets provisionally call it fixed based on the backtraces